[package]
name = "megabase_index_incrementer"
version = "0.2.1"
authors = ["mulark <mulark11@gmail.com>"]
edition = "2018"
license = "MIT"

[features]
default = ["bin"]
bin = ["directories", "sha2", "regex", "ureq"]

[lib]
name = "megabase_index_incrementer"
path = "src/lib.rs"

[[bin]]
name = "megabase_index_incrementer_bin"
path = "src/main.rs"

[dependencies]
directories = {version = "*", optional = true}
sha2 = {version = "*", optional = true}
serde = {version = "*", features = ["derive"]}
serde_json = "*"
regex = {version = "*", optional = true}
ureq = {version = "*", optional = true}
